Added ingredients and directions to banana cake recipe

--- a/recipes/Pizza.html
+++ b/recipes/Pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Pizza Recipe</h1> 
-   <img src="/repos/odin-recipes/recipe-images/pizza.png" alt="picture of a pizza" >
+   <img src="../food/pizza.png" alt="picture of a pizza" >
    <h1>Description</h1>
    <p>This homemade pizza is the most simpleast and most delicious recipe you will ever make</p>
 <h1>Ingredients</h1>
